# advent-2022

./: .gitignore  CMakeLists.txt  README.md  main.cxx  setup_day.cxx
common/: CMakeLists.txt  registry.cxx  registry_test.cxx
common/include/: SolutionBase.h  TupleHash.h  advent_registry.h
day_0/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_0/include/: day_0.h
day_00/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_00/include/: day_00.h
day_01/: solution.cxx  solution_test.cxx
day_01/include/: day_01.h
day_02/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_02/include/: day_02.h
day_03/: solution.cxx  solution_test.cxx
day_03/include/: day_03.h
day_04/: solution.cxx  solution_test.cxx  test-2-digit.txt
day_04/include/: day_04.h
day_05/: solution.cxx  solution_test.cxx
day_05/include/: day_05.h
day_06/: example.txt  solution.cxx  solution_test.cxx
day_06/include/: day_06.h
day_07/: solution.cxx  solution_test.cxx
day_07/include/: day_07.h
day_08/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_08/include/: day_08.h
day_09/: solution.cxx  solution_test.cxx
day_09/include/: day_09.h
day_10/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_10/include/: day_10.h
day_11/: solution.cxx  solution_test.cxx
day_11/include/: day_11.h
day_12/: solution.cxx  solution_test.cxx
day_12/include/: day_12.h
day_13/: solution.cxx  solution_test.cxx
day_13/include/: day_13.h
day_14/: CMakeLists.txt  solution.cxx  solution_test.cxx
day_14/include/: day_14.h
day_15/: solution.cxx  solution_test.cxx
day_15/include/: day_15.h
day_16/: example.txt  solution.cxx  solution_test.cxx
day_16/include/: day_16.h
day_17/: solution.cxx  solution_test.cxx
day_17/include/: day_17.h
day_18/: solution.cxx  solution_test.cxx
day_18/include/: day_18.h
day_19/: solution.cxx  solution_test.cxx
day_19/include/: day_19.h
day_20/: solution.cxx  solution_test.cxx
day_20/include/: day_20.h
day_21/: solution.cxx  solution_test.cxx
day_21/include/: day_21.h
day_22/: solution.cxx  solution_test.cxx
day_22/include/: day_22.h
day_23/: solution.cxx  solution_test.cxx
day_23/include/: day_23.h
day_24/: solution.cxx  solution_test.cxx
day_24/include/: day_24.h
day_25/: solution.cxx  solution_test.cxx
day_25/include/: day_25.h
